--- a/docker/nginx.lb.conf.tmpl
+++ b/docker/nginx.lb.conf.tmpl
@@ -10,8 +10,7 @@ events {
 
 http {
     upstream myapp1 {
-        server ${SERVER_ONE};
-        server ${SERVER_TWO};
+        ${SERVERS};
     }
 
     server {
